# Cpp-courses

./: README.md
task1_1/: CMakeLists.txt  task1.cpp
task1_2/: CMakeLists.txt  task2.cpp
task1_3/: CMakeLists.txt  task3.cpp
task1_4/: CMakeLists.txt  task4.cpp
task1_5/: CMakeLists.txt  Primes.cpp  Primes.h  fun.cpp  fun.h  task5.cpp
task2_1/: Bicycle.cpp  Bicycle.h  BicyclesInfo.h  CMakeLists.txt  task2_1.cpp
task2_2/: BJTransistor.cpp  BJTransistor.h  CMakeLists.txt  Diode.cpp  Diode.h  FETransistor.cpp  FETransistor.h  ScdrDevice.cpp  ScdrDevice.h  Transistor.cpp  Transistor.h  task2_2.cpp
task2_3/: CMakeLists.txt  Entity.h  Monster.h  Person.h  Vampire.h  main.cpp
